# oresat-mcxn947-demo

./: CMakeLists.txt  Kconfig  README.md  README.rst  prj.conf
src/: adc.c  blink.c  dac.c  i2c_sensor.c  main.c
